force-app/main/default/objects/Book__c/fields/BookType__c.field-meta.xml
<CustomField>
    <fullName>BookType__c</fullName>
    <label>구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>시</fullName>
            </value>
            <value>
                <fullName>소설</fullName>
            </value>
            <value>
                <fullName>수필</fullName>
            </value>
            <value>
                <fullName>자서전</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>