force-app/main/default/objects/Book__c/fields/LenderNo__c.field-meta.xml
<CustomField>
    <fullName>LenderNo__c</fullName>
    <label>대여자 번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>