force-app/main/default/objects/Book__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>테스트</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>